--- a/Capstone_Project/plants/templates/plants/index.html
+++ b/Capstone_Project/plants/templates/plants/index.html
@@ -8,7 +8,7 @@
 
     <div class="content">
         <section class="square1">
-            <a href="{% url 'plants:edamam' %}">open</a>
+            <a href="{% url 'plants:food_data' %}">open</a>
             empty space
         </section>
         <section class="options">
