--- a/Capstone_Project/users/templates/users/profile.html
+++ b/Capstone_Project/users/templates/users/profile.html
@@ -15,8 +15,8 @@
             <a href="{% url 'quizGame:index' %}">CLICK ME</a>
         </section>
         <section class="options">
-            <p>Learn More ---></p>
-            <p>Quiz <---</p>
+            <p>Learn More</p>
+            <a href="{% url 'plants:food_data' %}">open</a>
         </section>
         <section class="options">
             <p>Fruits & Vegetables</p>
