--- a/Capstone_Project/plants/templates/plants/food_data.html
+++ b/Capstone_Project/plants/templates/plants/food_data.html
@@ -7,20 +7,26 @@
     <h1>Vegetable & Fruit Search</h1>
     <h2>[[message]]</h2>
     <br>
+    <!-- <select v-model="selectedCategory"  name="" id="">
+        <option v-for='ingr in ingrResult' :value="categoryLabel">Food</option>
+        <option v-for='ingr in ingrResult' :value="categoryLabel">Meal</option>
+        <option v-for='category in categories' :value="category.categoryLabel">[[category?.food?.categoryLabel]]</option>
+    </select>
+    <button @click="searchIngr">CHOOSE</button> -->
     <div>
         <div>
-            <input type="text" v-model="userQuery" v-on:keydown.enter="searchIngr" type="text" placeholder="Search for food...">
+            <input type="text" v-model="userQuery"  type="text" placeholder="Search for food...">
             <button v-on:click="searchIngr">Search</button> 
         </div>
     </div>
-    <h2>"[[ingrResult.length]]" SEARCH RESULTS FOUND</h2>
+    <!-- <h2>"[[ingrResult.length]]" SEARCH RESULTS FOUND</h2>
     <br>
     <h4>You searched for: [[userQuery]]</h4>
     <br>
     <h5><a href="{% url 'plants:index' %}">Home</a> > <a href="#">Search results for [[userQuery]]</a></h5>
-    <br>
+    <br> -->
 
-    <div>
+    <!-- <div>
         <div>
             <h2>Title of "Food Searched"</h2>   
             <p>Information about "food searched". Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, dicta.</p>
@@ -36,9 +42,20 @@
             <p>User Query: [[userQuery]]</p>
             <p>Category Label: [[data?.food?.categoryLabel]]</p>
         </li>
+    </div> -->
+
+    <div class="wrapper">
+        <div class="entry">
+            <figure v-for="(data, i) in ingrResult">
+                <img v-bind:src="[[data?.food?.image]]" alt="Food Image">
+                <a href="#"><figcaption>[[data?.food?.label]]</figcaption></a> 
+            </figure>
+        </div>
     </div>
+    
+
 </div>
-    <div>
+    <!-- <div>
         <h4>Links: {{links}}</h4>
-    </div>
+    </div> -->
 {% endblock %}
