--- a/Capstone_Project/plants/static/plants/style.css
+++ b/Capstone_Project/plants/static/plants/style.css
@@ -1,11 +1,11 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
 body{
-  height: 100%;
+  height: 100vh;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -79,6 +79,7 @@ body{
     color: black;
   }
 
+  /* Body Styling */
 .content {
   display: flex;
   justify-content: center;
@@ -163,4 +164,20 @@ figure img {
 
 figcaption {
   padding-left: 20px;
+}
+
+/* Footer Styling */
+ .footer {
+  text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  background-color: blue;
+  color: white;
+}
+
+.above { 
+  position: absolute; top: -40px;
+  color: blue;
 }
