--- a/Capstone_Project/plants/templates/plants/about.html
+++ b/Capstone_Project/plants/templates/plants/about.html
@@ -1,6 +1,101 @@
 {% extends 'plants/base.html' %}
-
+{% load static %}
 {% block plants %}
+
+<div>
+    <div>
+        <img src="{% static 'plants/images/banner_food_image.jpg' %}" alt="banner">
+        <div>
+            <h3>About Us</h3>
+        </div>
+    </div>
+</div>
+<div>
+    <div>
+        <div>
+            <h4>Welcome To Good Food</h4>
+            <h3>A LITTLE STORY ABOUT US</h3>
+            <div>
+                <img src="{% static 'plants/images/leaf_image.png' %}" alt="leaf">
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+    <div>
+        <img src="{% static 'plants/images/vegetables_basket.png' %}" alt="basket of food">
+    </div>
+    <div>
+        <h3>A FRIENDLY ONLINE STORY</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus vel facere expedita quos quod velit et, consectetur quia! Cumque mollitia, officia sit iste quam sint!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ea vero culpa sequi nostrum sit, quasi harum quia ut tenetur.</p>
+        <div>
+            <img src="{% static 'plants/images/basil_in_bowl.jpg' %}" alt="basil">
+            <img src="{% static 'plants/images/peas_in_pod.jpg' %}" alt="peas in pod">
+            <img src="{% static 'plants/images/mini_watermelon.jpg' %}" alt="mini watermelon">
+        </div>
+    </div>
+</div>
+<div>
+    <div>
+        <h3>Why Choose Us</h3>
+        <div>
+            <img src="{% static 'plants/images/leaf_image.png' %}" alt="leaf">
+        </div>
+    </div>
+</div>
+<div>
+    <div>
+        <div>
+            <div><img src="{% static 'plants/images/circle_logo.png' %}" alt="circle logo 1"></div>
+            <div>
+                <h3>Always Fresh</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div>
+            <div><img src="{% static 'plants/images/circle_logo_2.png' %}" alt="circle logo 2"></div>
+            <div>
+                <h3>Keep You Healthy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div>
+            <div><img src="{% static 'plants/images/circle_logo_3.png' %}" alt="circle logo 3"></div>
+            <div>
+                <h3>Healthy Cooking</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <img src="{% static 'plants/images/pineapple_fruit.jpg' %}" alt="pineapple">
+    </div>
+    <div>
+        <div>
+            <div><img src="{% static 'plants/images/circle_logo_4.png' %}" alt="circle logo 4"></div>
+            <div>
+                <h3>Always Fresh</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div>
+            <div><img src="{% static 'plants/images/circle_logo_5.png' %}" alt="circle logo 5"></div>
+            <div>
+                <h3>Keep You Healthy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div>
+            <div><img src="{% static 'plants/images/circle_logo_6.png' %}" alt="circle logo 6"></div>
+            <div>
+                <h3>Healthy Cooking</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div>
     <article>
         <h1>Header {{ message }}</h1>
