--- a/Capstone_Project/plants/templates/plants/base.html
+++ b/Capstone_Project/plants/templates/plants/base.html
@@ -39,7 +39,7 @@
     </div>
 
     <footer class="footer">
-        <img class="above" src='https://lh3.googleusercontent.com/proxy/l3NfZbKHK_sSZaw034vwF7xlBcAHQke5ZGlG3wzFMzXkCCZ3kWtA0e73vrW2_nZnmdUP75arXDNvBl8EioqfqZiejWww1R9DC67bYiIdRagBltq7rGHCBeh_gME-HrNZ5KIWJVt9' alt="Farm Footer">  
+        <img class="above" src="{% static 'plants/images/food footer2.png' %}" alt="Farm Footer">  
         <p>Footer</p>
         <div>
             <h3>About</h3>   
