--- a/Capstone_Project/plants/templates/plants/dashboard.html
+++ b/Capstone_Project/plants/templates/plants/dashboard.html
@@ -13,20 +13,13 @@
             <button v-on:click="searchMeals">Search</button> 
         </div>
     </div>
-
-    <!-- <div class="wrapper">
-        <div class="wrapper">
-            <div v-for="(data, i) in mealsResult" class="entry">
-                <img v-bind:src="[[data?.recipe?.image]]" alt="Food Image">
-                <h3>LabeL:[[data?.recipe?.label]]</h3>
-            </div>
-        </div>
-    </div> -->
-    <li v-for="(data, i) in mealsResult">
-        <p>RECIPE: [[data?.recipe?.label]]</p> 
-        <p><img v-bind:src="[[data?.recipe?.image]]" alt="Food Image"></p>
-        <p><a v-bind:href="data?.recipe?.url">[[data?.recipe?.url]]</a></p>
-    </li>
+    <div>
+        <li v-for="(data, i) in mealsResult">
+            <p>RECIPE: [[data?.recipe?.label]]</p> 
+            <p><img v-bind:src="[[data?.recipe?.image]]" alt="Food Image"></p>
+            <p><a v-bind:href="data?.recipe?.url">[[data?.recipe?.url]]</a></p>
+        </li>    
+    </div>
     <footer>
         <div id="edamam-badge" data-color="white"></div>    
     </footer>
