--- a/Capstone_Project/quizGame/templates/quizGame/index.html
+++ b/Capstone_Project/quizGame/templates/quizGame/index.html
@@ -16,7 +16,14 @@
     <script defer src="{% static 'quizGame/main.js' %}"></script>
 </head>
 
+
 <body>
+  {% if user.is_authenticated %}
+  <div>
+    <h3><a href="{% url 'logout_user' %}">logout</a> </h3>
+    <h3><a href="{% url 'plants:dashboard' %}">DASHBOARD</a></h3> 
+  </div>
+
     <div class="header" id="myHeader">
       <h1>Header: {{ message }}</h1>
         <div class="topNav">
@@ -96,7 +103,10 @@
       <a href="#" class="fa fa-instagram"></a>
   </div>
 </footer>
-
+  {% else %}
+  <a href="{% url 'login_user' %}">Login</a>
+  <a href="{% url 'register' %}">Sign Up</a>
+  {% endif %} 
 
     <script>
       window.onscroll = function() {myFunction()};
