--- a/Capstone_Project/users/templates/users/profile.html
+++ b/Capstone_Project/users/templates/users/profile.html
@@ -3,8 +3,13 @@
 {% block users %}
 <div>
    {% if user.is_authenticated %}
-    <a href="{% url 'logout_user' %}">logout</a>    
-    <h1>Welcome {{ user }}!</h1>
+   <div>
+       <h2>MEMBER HOME</h2>
+       <h3><a href="{% url 'logout_user' %}">logout</a> </h3>
+       <h3><a href="{% url 'plants:dashboard' %}">DASHBOARD</a></h3> 
+   </div>
+    
+    <h1>HELLO, {{ user }}!</h1>
     <hr>
     <div class="content">
         <section class="square1">
