--- a/Capstone_Project/plants/templates/plants/base.html
+++ b/Capstone_Project/plants/templates/plants/base.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <img class="above" src="{% static 'plants/images/food footer2.png' %}" alt="Farm Footer">  
         <p>Footer</p>
         <div>
@@ -74,7 +74,7 @@
             <a href="#" class="fa fa-youtube"></a>
             <a href="#" class="fa fa-instagram"></a>
         </div>
-    </footer>
+    </footer> -->
 
     <script>
         window.onscroll = function() {myFunction()};
