--- a/Capstone_Project/gardenPlot/templates/gardenPlot/index.html
+++ b/Capstone_Project/gardenPlot/templates/gardenPlot/index.html
@@ -41,10 +41,10 @@
 
     <div class="plot">
         <h2>Watch your seeds blossom into plants!</h2>
-        <h5>Roll Your Mouse Across The Spaces</h5>
-        <table class="innerplot">
+        <h5>Roll Your Mouse Across The Spaces</h5>    
+        <table class="innerplot">            
         <tr class="row1">
-            <th>ROW 1</th>
+            <th>Row 1<br>Raspberry</th>
             <td></td>
             <td></td>
             <td></td>
@@ -52,7 +52,7 @@
             <td></td>
         </tr>
         <tr class="row2">
-            <th>ROW 2</th>
+            <th>Row 2<br>Carrot</th>
             <td></td>
             <td></td>
             <td></td>
@@ -60,7 +60,7 @@
             <td></td>
         </tr>
         <tr class="row3">
-            <th>ROW 3</th>
+            <th>Row 3<br>Apple</th>
             <td></td>
             <td></td>
             <td></td>
@@ -68,7 +68,7 @@
             <td></td>
         </tr>
         <tr class="row4">
-            <th>ROW 4</th>
+            <th>Row 4<br>Bell Pepper</th>
             <td></td>
             <td></td>
             <td></td>
@@ -78,7 +78,7 @@
     </table>
     </div>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <img class="above" src='https://lh3.googleusercontent.com/proxy/l3NfZbKHK_sSZaw034vwF7xlBcAHQke5ZGlG3wzFMzXkCCZ3kWtA0e73vrW2_nZnmdUP75arXDNvBl8EioqfqZiejWww1R9DC67bYiIdRagBltq7rGHCBeh_gME-HrNZ5KIWJVt9' alt="Farm Footer">  
         <p>Footer</p>
         <div>
@@ -115,7 +115,7 @@
             <a href="#" class="fa fa-youtube"></a>
             <a href="#" class="fa fa-instagram"></a>
         </div>
-    </footer>
+    </footer> -->
 
     <script>
         window.onscroll = function() {myFunction()};
